# gist

./: .gitignore  LICENSE  README.md  vercel.json
.github/workflows/: ci.yml
api/: .env.example  README.md  package-lock.json  package.json  pyproject.toml
api/migrations/: 001_init.sql  002_reserved.sql  003_rate_limits.sql  004_auth_sessions.sql  005_cleartext_api_keys.sql  006_standard_gist_key_scopes.sql  007_remove_key_scope_columns.sql  008_api_key_avatar_url.sql  009_image_assets.sql  010_push_notifications.sql  011_multifile_gists.py
api/src/gist_api/: admin.py  app.py  auth.py  avatars.py  db.py  errors.py  external_ids.py  gist_files.py  images.py  markdown.py  migrations.py  notifications.py  push_worker.py  rate_limits.py  render_highlight.mjs  routes.py  service.py  settings.py
api/tests/: conftest.py  test_admin.py  test_agent_docs.py  test_auth.py  test_db.py  test_external_ids.py  test_gist_files.py  test_gists_api.py  test_images_api.py  test_markdown.py  test_migrations.py  test_notifications.py  test_publish_gist.py  test_push_worker.py  test_rate_limits.py
api/tests/fixtures/: github_like_gist.md
scripts/: publish-gist
ui/: .env.example  next.config.mjs  package-lock.json  package.json  proxy.ts
ui/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  manifest.ts  markdown-theme.css  not-found.tsx  page.tsx  syntax.css
ui/components/: AlertSettings.tsx  ApiKeyCopyButton.tsx  ApiKeyDisclosure.tsx  AppHeader.tsx  ConfirmModal.tsx  DeleteGistButton.tsx  GistHistory.tsx  GistViewer.tsx  LocalTimestamp.tsx  LogoutButton.tsx  (+7 more)
(+40 files in other folders)
